[metadata]
name = semantic-fscacher
version = 0.3.0
description = File system based caching
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/pnsaevik/fscacher
author = Pål Næverlid Sævik
author_email = pnsaevik@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages =
    fscacher
python_requires = >=3.6
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    simplemake = fscacher:runmake
